--- a/cfn/lambda/process-streams/package.json
+++ b/cfn/lambda/process-streams/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "get-item-by-id-lambda",
+  "name": "process-streams-lambda",
   "version": "1.0.0",
-  "description": "AWS Lambda function to get an item by ID from DynamoDB",
+  "description": "AWS Lambda function to process DynamoDB streams",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
