--- a/cfn/serverless-app.yaml
+++ b/cfn/serverless-app.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: Serverless API with Lambda, API Gateway, DynamoDB, and Cognito
+Description: Serverless API with Lambda, API Gateway, and DynamoDB
 
 Parameters:
   Environment:
@@ -38,14 +38,9 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: !Ref Environment
-      Auth:
-        DefaultAuthorizer: CognitoAuthorizer
-        Authorizers:
-          CognitoAuthorizer:
-            UserPoolArn: !GetAtt UserPool.Arn
       Cors:
         AllowMethods: "'GET,POST,PUT,DELETE,OPTIONS'"
-        AllowHeaders: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key'"
+        AllowHeaders: "'Content-Type,X-Amz-Date,X-Api-Key'"
         AllowOrigin: "'*'"
       MethodSettings:
         - ResourcePath: '/*'
@@ -70,8 +65,6 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref ItemsTable
-        - SNSPublishMessagePolicy:
-            TopicName: !GetAtt NotificationTopic.TopicName
       Events:
         GetItems:
           Type: Api
@@ -131,187 +124,9 @@ Resources:
       KeySchema:
         - AttributeName: id
           KeyType: HASH
-      StreamSpecification:
-        StreamViewType: NEW_AND_OLD_IMAGES
-      PointInTimeRecoverySpecification:
-        PointInTimeRecoveryEnabled: !If [IsProd, true, false]
       Tags:
         - Key: Environment
           Value: !Ref Environment
-
-  # Lambda function to process DynamoDB streams
-  ProcessDynamoDBStreamsFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      FunctionName: !Sub "${Environment}-process-streams"
-      Handler: index.processStream
-      Runtime: !Ref LambdaRuntime
-      CodeUri: ./lambda/process-streams/
-      Timeout: 60
-      MemorySize: 256
-      Environment:
-        Variables:
-          ENVIRONMENT: !Ref Environment
-          NOTIFICATION_TOPIC: !Ref NotificationTopic
-      Policies:
-        - SNSPublishMessagePolicy:
-            TopicName: !GetAtt NotificationTopic.TopicName
-      Events:
-        Stream:
-          Type: DynamoDB
-          Properties:
-            Stream: !GetAtt ItemsTable.StreamArn
-            StartingPosition: LATEST
-            BatchSize: 10
-
-  # SNS Topic for notifications
-  NotificationTopic:
-    Type: AWS::SNS::Topic
-    Properties:
-      TopicName: !Sub "${Environment}-item-notifications"
-
-  NotificationSubscription:
-    Type: AWS::SNS::Subscription
-    Properties:
-      Protocol: email
-      TopicArn: !Ref NotificationTopic
-      Endpoint: !Sub "admin-${AWS::AccountId}@example.com"
-
-  # Cognito User Pool for API authentication
-  UserPool:
-    Type: AWS::Cognito::UserPool
-    Properties:
-      UserPoolName: !Sub "${Environment}-user-pool"
-      AutoVerifiedAttributes:
-        - email
-      UsernameAttributes:
-        - email
-      Policies:
-        PasswordPolicy:
-          MinimumLength: 8
-          RequireLowercase: true
-          RequireNumbers: true
-          RequireSymbols: true
-          RequireUppercase: true
-      Schema:
-        - Name: name
-          AttributeDataType: String
-          Mutable: true
-          Required: true
-        - Name: email
-          AttributeDataType: String
-          Mutable: false
-          Required: true
-      MfaConfiguration: 'OFF'
-      EmailVerificationMessage: 'Your verification code is {####}'
-      EmailVerificationSubject: 'Your verification code'
-
-  UserPoolClient:
-    Type: AWS::Cognito::UserPoolClient
-    Properties:
-      ClientName: !Sub "${Environment}-app-client"
-      UserPoolId: !Ref UserPool
-      GenerateSecret: false
-      ExplicitAuthFlows:
-        - ALLOW_USER_PASSWORD_AUTH
-        - ALLOW_REFRESH_TOKEN_AUTH
-      PreventUserExistenceErrors: ENABLED
-
-  # S3 Bucket for application assets
-  AssetsBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: !Sub "${AWS::StackName}-assets-${AWS::AccountId}"
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
-      VersioningConfiguration:
-        Status: Enabled
-      LifecycleConfiguration:
-        Rules:
-          - Id: DeleteOldVersions
-            Status: Enabled
-            NoncurrentVersionExpiration:
-              NoncurrentDays: 90
-
-  # CloudFront Distribution for content delivery
-  CloudFrontDistribution:
-    Type: AWS::CloudFront::Distribution
-    Properties:
-      DistributionConfig:
-        Origins:
-          - DomainName: !GetAtt AssetsBucket.RegionalDomainName
-            Id: S3Origin
-            S3OriginConfig:
-              OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
-          - DomainName: !Sub "${ApiGateway}.execute-api.${AWS::Region}.amazonaws.com"
-            Id: APIOrigin
-            OriginPath: !Sub "/${Environment}"
-            CustomOriginConfig:
-              OriginProtocolPolicy: https-only
-              OriginSSLProtocols:
-                - TLSv1.2
-        Enabled: true
-        DefaultRootObject: index.html
-        DefaultCacheBehavior:
-          TargetOriginId: S3Origin
-          ViewerProtocolPolicy: redirect-to-https
-          ForwardedValues:
-            QueryString: false
-            Cookies:
-              Forward: none
-          MinTTL: 0
-          DefaultTTL: 3600
-          MaxTTL: 86400
-        CacheBehaviors:
-          - PathPattern: /api/*
-            TargetOriginId: APIOrigin
-            ViewerProtocolPolicy: https-only
-            AllowedMethods:
-              - DELETE
-              - GET
-              - HEAD
-              - OPTIONS
-              - PATCH
-              - POST
-              - PUT
-            CachedMethods:
-              - GET
-              - HEAD
-              - OPTIONS
-            ForwardedValues:
-              QueryString: true
-              Headers:
-                - Authorization
-              Cookies:
-                Forward: all
-            MinTTL: 0
-            DefaultTTL: 0
-            MaxTTL: 0
-        PriceClass: PriceClass_100
-        ViewerCertificate:
-          CloudFrontDefaultCertificate: true
-
-  CloudFrontOriginAccessIdentity:
-    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
-    Properties:
-      CloudFrontOriginAccessIdentityConfig:
-        Comment: !Sub "OAI for ${Environment} environment"
-
-  BucketPolicy:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket: !Ref AssetsBucket
-      PolicyDocument:
-        Statement:
-          - Action:
-              - s3:GetObject
-            Effect: Allow
-            Resource: !Sub "${AssetsBucket.Arn}/*"
-            Principal:
-              CanonicalUser: !GetAtt CloudFrontOriginAccessIdentity.S3CanonicalUserId
 
 # Conditions for conditional resource creation
 Conditions:
@@ -324,32 +139,14 @@ Outputs:
     Export:
       Name: !Sub "${Environment}-ApiEndpoint"
 
-  UserPoolId:
-    Description: Cognito User Pool ID
-    Value: !Ref UserPool
-    Export:
-      Name: !Sub "${Environment}-UserPoolId"
-
-  UserPoolClientId:
-    Description: Cognito User Pool Client ID
-    Value: !Ref UserPoolClient
-    Export:
-      Name: !Sub "${Environment}-UserPoolClientId"
-
   ItemsTableName:
     Description: DynamoDB Items Table name
     Value: !Ref ItemsTable
     Export:
       Name: !Sub "${Environment}-ItemsTableName"
-
-  CloudFrontDistributionDomain:
-    Description: CloudFront distribution domain name
-    Value: !GetAtt CloudFrontDistribution.DomainName
+      
+  HonoApiFunctionName:
+    Description: Hono API Lambda function name
+    Value: !Ref HonoApiFunction
     Export:
-      Name: !Sub "${Environment}-CloudFrontDomain"
-
-  AssetsBucketName:
-    Description: S3 bucket for application assets
-    Value: !Ref AssetsBucket
-    Export:
-      Name: !Sub "${Environment}-AssetsBucketName" 
+      Name: !Sub "${Environment}-HonoApiFunction" 
