added hono example

--- a/cfn/lambda/hono-api/package.json
+++ b/cfn/lambda/hono-api/package.json
@@ -10,6 +10,7 @@
     "@hono/aws-lambda": "^1.0.0",
     "aws-sdk": "^2.1499.0",
     "hono": "^3.10.2",
+    "mysql2": "^3.6.5",
     "ulid": "^2.3.0"
   }
 } 
